fixed a few css settings

--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,7 @@ header {
   background: var(--dark);
 }
 
-header a {
+header {
   color: var(--light);
 }
 
@@ -108,7 +108,7 @@ button {
   outline: none;
   cursor: pointer;
   margin: 0 1px;
-  background-color: var(--secondary);
+  background-color: #750505;
 }
 
 button:hover {
@@ -234,6 +234,9 @@ textarea {
   width: 25%;
   text-align: center;
 }
+.card-title, .card-body, .card-link {
+  color: #750505;
+}
 
 .img-thumbnail {
   width: auto;
@@ -269,8 +272,7 @@ textarea {
 }
 
 button {
-	background: var(--primary);
-	border: 0;
+	background: #750505;
 	border-radius: 5px;
 	color: #fff;
 	cursor: pointer;
@@ -291,5 +293,19 @@ a {
 }
 
 .navActive {
-  color: var(--secondary);
+  color: #750505;
+}
+
+.section-title {
+  font-size: 32px;
+  text-align: center;
+  color: #750505;
+  border-bottom: 2px solid;
+  padding-bottom: 5px;
+  margin: 35px auto 35px auto;
+  width: 10%;
+  display: flex;
+  justify-content: center;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  clear: both;
 }
